# pythonbody

./: .gitignore  .gitlab-ci.yml  README.md  __init__.py  cluster.py  dat10.py  defaults.py  nbdf.py  nbody.py  plots.py  requirements.txt  settings.py  shells.py  snap.py  tests.py
data_files/: __init__.py  comm.py  conf.py  data_file.py  esc.py  globals.py  lagr.py  stdout.py
defaults/: __init__.py  defaults.py  snap.py
docs/source/: conf.py  dat10.rst  index.rst  installation.rst  nbdf.rst  nbody.rst  plots.rst  snap.rst  usage.rst
docs/source/data_files/: comm.rst  conf.rst  esc.rst  globals.rst  index.rst  lagr.rst  pbdf.rst  stdout.rst
docs/source/snap/: index.rst
examples/: snap.ipynb
ffi/: Makefile  Makefile.am  Makefile.in  Makefile.old  __init__.py  add.cu  configure  configure.ac  ffi.py  grav_pot  grav_pot.c  grav_pot.c.bak  grav_pot.cu  grav_pot_cl.c  grav_pot_cl_kernel.c  main.c
ffi/include/: cummean.h  grav_pot.h  neighbour_density.h  ocl.h
ffi/src/: cummean.c  grav_pot.c  grav_pot.cu  grav_pot.h  grav_pot_ocl.c  neighbour_density.c  ocl.c  tests.c
ffi/src/.deps/: libcummean_la-cummean.Plo  libgrav_pot_la-grav_pot.Plo
imf/: __init__.py  distributions.py  imf.py  kroupa.py  powerlaw.py  salpeter.py
snap/: __init__.py  binaries.py  singles.py  snap.py
utils/: __init__.py  cummean.py  grav_pot.py  grav_pot.py.bak
